--- a/templates/Factory/deployment-details.yaml
+++ b/templates/Factory/deployment-details.yaml
@@ -168,7 +168,13 @@ spec:
                                   vertical: true
                                   gap: 4
                                 children:
-                                  {{ include "incloud-web-resources.factory.labels.base.node.selector" . | nindent 34 }}
+                                  {{ include "incloud-web-resources.factory.labels.base.selector" (dict
+                                      "type" "node"
+                                      "title" "Node selector"
+                                      "jsonPath" ".spec.template.spec.nodeSelector"
+                                    ) | nindent 34
+                                  }}
+
 
                               # Pod selector key-value list (rendered by include)
                               - type: antdFlex
@@ -177,7 +183,12 @@ spec:
                                   vertical: true
                                   gap: 4
                                 children:
-                                  {{ include "incloud-web-resources.factory.labels.base.pod.selector" . | nindent 34 }}
+                                  {{ include "incloud-web-resources.factory.labels.base.selector" (dict
+                                      "type" "pod"
+                                      "title" "Pod selector"
+                                      "jsonPath" ".spec.template.metadata.labels"
+                                    ) | nindent 34
+                                  }}
 
                               # Tolerations counter (rendered by include)
                               - type: antdFlex
@@ -186,7 +197,12 @@ spec:
                                   vertical: true
                                   gap: 4
                                 children:
-                                  {{ include "incloud-web-resources.factory.counters.template.tolerations" . | nindent 34 }}
+                                  {{ include "incloud-web-resources.factory.counters.fields" (dict
+                                      "jsonPath" ".spec.template.spec.tolerations"
+                                      "type" "tolerations"
+                                      "title" "Tolerations"
+                                    ) | nindent 34
+                                  }}
 
                               # Annotations counter (rendered by include)
                               - type: antdFlex
